--- a/compressor/package.json
+++ b/compressor/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.7.0",
     "cloudinary": "^2.6.1",
     "next": "15.3.1",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
