--- a/compressor/package.json
+++ b/compressor/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.19.0",
     "@prisma/client": "^6.7.0",
+    "axios": "^1.9.0",
     "cloudinary": "^2.6.1",
     "next": "15.3.1",
     "next-cloudinary": "^6.16.0",
